Фикс бага со спойлером (версия с удалением и созданием нового)